@@ -47,6 +47,7 @@ All:
 All (GUI):
 
 - Added wxTreebook (uses a wxTreeCtrl to control pages).
+- Added wxDC::GradientFillLinear/Concentric()
 - Added wxKeyEvent::GetModifiers()
 - Added wxDialog::SetEscapeId().
 - wxItemContainerImmutable::FindString unified (affects wxRadioBox, wxListBox,
